--- a/index.html
+++ b/index.html
@@ -87,6 +87,31 @@
 						A01223034<br /><br />
 						Abraham Rivera Soto<br />
 						A01224262
+						<br />
+						<br />
+						<a href="https://drive.google.com/folderview?id=0B87wG8GwNTYhQUtFalZ2bzVGXzQ&usp=sharing">Trabajos 2do parcial</a>
+						<br />
+						<br />
+						<a href="http://v2.github.io">Chava: webpage v2</a>
+						<br />
+						<br />
+						<a href="http://v3.github.io">Chava: webpage v3</a>
+						<br />
+						<br />
+						<a href="">Christian: webpage v2</a>
+						<br />
+						<br />
+						<a href="">Christian: webpage v3</a>
+						<br />
+						<br />
+						<a href="">Abraham: webpage v2</a>
+						<br />
+						<br />
+						<a href="">Abraham: webpage v3</a>
+						<br />
+						<a href="http://personas.github.io">Personas</a>
+						<br />
+						<br />
 					</p>
 					<iframe width="420" height="300" src="//www.youtube.com/embed/le_WOtn2xyc" frameborder="0" allowfullscreen></iframe>
 				</div>
