--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<a href="https://drive.google.com/folderview?id=0B87wG8GwNTYhQUtFalZ2bzVGXzQ&usp=sharing">Trabajos 2do parcial</a>
 						<br />
 						<br />
-						<a href="http://v2.github.io">Chava: webpage v2</a>
+						<a href="v2.html">Chava: webpage v2</a>
 						<br />
 						<br />
 						<a href="http://v3.github.io">Chava: webpage v3</a>
