--- a/index.html
+++ b/index.html
@@ -88,24 +88,15 @@
 						Abraham Rivera Soto<br />
 						A01224262
 						<br />
+						<h4><a href="https://drive.google.com/folderview?id=0B87wG8GwNTYhQUtFalZ2bzVGXzQ&usp=sharing">Trabajos 2º parcial</a></h4>
+						<h4><a href="v2.html">JavaScript Webpage v2</a></h4>
+						<h4><a href="tercero/template.html">Chava-UI Kit Webpage v3</a></h4>
+						<h4><a href="">Christian-UI Kit Webpage v3</a></h4>
+						<h4><a href="">Abraham-UI Kit Webpage v3</a></h4>
+						<h4><a href="persona.html">Personas & Benchmark</a></h4>
+						<h4><a href="diagrama.jpg">Diagram</a></h4>
 						<br />
-						<a href="https://drive.google.com/folderview?id=0B87wG8GwNTYhQUtFalZ2bzVGXzQ&usp=sharing">Trabajos 2º parcial</a>
-						<br />
-						<br />
-						<a href="v2.html">Chava: webpage v2</a>
-						<br />
-						<br />
-						<a href="tercero/template.html">Chava-UI Kit Webpage v3</a>
-						<br />
-						<br />
-						<a href="">Christian-UI Kit Webpage v3</a>
-						<br />
-						<br />
-						<a href="">Abraham-UI Kit Webpage v3</a>
-						<br />
-						<a href="persona.html">Personas</a>
-						<br />
-						<br />
+						
 					</p>
 					<iframe width="420" height="300" src="//www.youtube.com/embed/le_WOtn2xyc" frameborder="0" allowfullscreen></iframe>
 				</div>
