--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<h4><a href="v2.html">JavaScript Webpage v2</a></h4>
 						<h4><a href="tercero/template.html">Salvador-UI Kit Webpage v3</a></h4>
 						<h4><a href="Webpage v1.1 chava.png">Salvador Webpage cacoon</a></h4>
-						<h4><a href="Project/Info.html">Salvador Webpage cacoon implementation</a></h4>
+						<h4><a href="Info.html">Salvador Webpage cacoon implementation</a></h4>
 						<h4><a href="Webpage.jpg">Christian-UI Kit Webpage v3</a></h4>
 						<h4><a href="">Abraham-UI Kit Webpage v3</a></h4>
 						<h4><a href="persona.html">Personas & Benchmark</a></h4>
