--- a/persona.html
+++ b/persona.html
@@ -45,6 +45,7 @@
 			<h3><u>Personas</u></h3>
 			<img src="Online Prescriptions  Persona.png" alt="Persona 1">
 			<img src="Persona Chava.jpg" alt="Persona 2">
+			<img src="coco2.jpg" alt="Persona 3">
 			<h3><u>Interviews</u></h3>
 			<h4><u>Professional</u></h4>
 			<img src="pregunta.jpg" alt="Professional Interview-Questions">
