--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 						A01224262
 						<br />
 						
-						<h4><a href="v2.html">JavaScript Webpage v2</a></h4>
-						<h4><a href="Webpage v1.1 chava.png">Salvador Webpage cacoon</a></h4>
+						<h4><a href="v2.html">One-Page Webpage v2</a></h4>
+						<h4><a href="Webpage v1.1 chava.png">Salvador cacoon</a></h4>
 						<h4><a href="Info.html">Salvador Webpage cacoon implementation</a></h4>
-						<h4><a href="Webpage v1.1 christian.png">Christian Webpage cacoon</a></h4>
+						<h4><a href="Webpage v1.1 christian.png">Christian cacoon</a></h4>
 						<h4><a href="Info.html">Christian Webpage cacoon implementation</a></h4>
 						<h4><a href="tercero/template.html">Salvador-UI Kit Webpage v3</a></h4>
 						<h4><a href="Webpage.jpg">Christian-UI Kit Webpage v3</a></h4>
