--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 						
 						<h4><a href="v2.html">One-Page Webpage v2</a></h4>
 						<h4><a href="Webpage v1.1 chava.png">Salvador cacoon</a></h4>
-						<h4><a href="Info.html">Salvador Webpage cacoon implementation</a></h4>
+						<h4><a href="Info.html">Salvador cacoon implementation</a></h4>
 						<h4><a href="Webpage v1.1 christian.png">Christian cacoon</a></h4>
-						<h4><a href="Info.html">Christian Webpage cacoon implementation</a></h4>
+						<h4><a href="Info.html">Christian cacoon implementation</a></h4>
 						<h4><a href="tercero/template.html">Salvador-UI Kit Webpage v3</a></h4>
 						<h4><a href="Webpage.jpg">Christian-UI Kit Webpage v3</a></h4>
 						<h4><a href="coco.jpg">Abraham-UI Kit Webpage v3</a></h4>
