--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<h4><a href="Info.html">Christian cacoon implementation</a></h4>
 						<h4><a href="tercero/template.html">Salvador-UI Kit Webpage v3</a></h4>
 						<h4><a href="Webpage.jpg">Christian-UI Kit Webpage v3</a></h4>
-						<h4><a href="coco.jpg">Abraham-UI Kit Webpage v3</a></h4>
+						<h4><a href="Coco.png">Abraham-UI Kit Webpage v3</a></h4>
 						<h4><a href="persona.html">Personas & Benchmark</a></h4>
 						<h4><a href="diagrama.jpg">Diagram</a></h4>						
 					</p>
