--- a/final/source.html
+++ b/final/source.html
@@ -60,8 +60,8 @@
 		}
 		
 		@media screen and (max-width: 1136) {
-    	#primary { width:80%; }
-    	#secondary { width:80%; margin: 10% auto;}  
+    	#primary { width:100%; }
+    	#secondary { width:100%; margin: 10px;}  
 		}
 
 		/* Tabled Portrait */
