--- a/final/source.html
+++ b/final/source.html
@@ -88,7 +88,7 @@
 	<body bgcolor="#C7FFFF">
     
     	<div class="row" id="contenedor">
-    		<h1>Online Prescriptions</h1>
+    		<div class="col-md-12"><h1>Online Prescriptions</h1></div>
     	</div>
 	</div>
 	<div class="p" id="contenedor">
