--- a/final/source.html
+++ b/final/source.html
@@ -65,7 +65,7 @@
 		}
 
 		/* Tabled Portrait */
-		@media screen and (min-width: 768px) {
+		@media screen and (min-width: 1024) {
   		#primary { width:100%; }
     	#secondary { width:100%; margin: 0px; }
 		}
