--- a/final/source.html
+++ b/final/source.html
@@ -11,7 +11,7 @@
 
     <meta name="description" content="Flat UI Kit Free is a Twitter Bootstrap Framework design and Theme, this responsive framework includes a PSD and HTML version."/>
 
-    <meta name="viewport" content="width=1000, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=1000, initial-scale1.0, maximum-scale=2.0">
     <!-- Loading Flat UI -->
     <link href="css/flat-ui.css" rel="stylesheet">
     <link href="css/demo.css" rel="stylesheet">
@@ -51,11 +51,10 @@
 		    margin:0;
 		    padding:0;
 		}
-		
 
-
+		#contenedor{
+	  		width: 640;
 		}
-
 		
 		@media screen and (max-width: 1136) {
     	#primary { width:100%; }
@@ -63,7 +62,7 @@
 		}
 
 		/* Tabled Portrait */
-		@media screen and (min-width: 1024) {
+		@media screen and (min-width: 640) {
   		#primary { width:100%; }
     	#secondary { width:100%; margin: 0px; }
 		}
