--- a/final/faq.html
+++ b/final/faq.html
@@ -82,7 +82,16 @@
 				<div class="panel panel-default">
 				  <div class="panel panel-primary">
 				    <div class="panel-heading">Profile:</div>
-				    <div class="panel-body">[Profile Information]</div>
+				    <div class="panel-body">
+				    	 <b>Name: </b>
+						 Salvador Ahedo Leyva
+						 <br></br>
+						 <b>Age: </b>
+						 19
+						 <br></br>
+						 <b>Weight: </b>
+						 60 Kg
+				    </div>
 				  </div>
 				</div>
 			</div>
