--- a/final/faq.html
+++ b/final/faq.html
@@ -89,8 +89,8 @@
 						 <b>Age: </b>
 						 19
 						 <br></br>
-						 <b>Weight: </b>
-						 60 Kg
+						 <b>Weight: 60 Kg</b>
+						 
 				    </div>
 				  </div>
 				</div>
