--- a/final/faq.html
+++ b/final/faq.html
@@ -85,12 +85,10 @@
 				    <div class="panel-body">
 				    	 <b>Name: </b>
 						 Salvador Ahedo Leyva
-						 <br></br>
 						 <b>Age: </b>
 						 19
-						 <br></br>
-						 <b>Weight: 60 Kg</b>
-						 
+						 <b>Weight: </b>
+						 60 Kg
 				    </div>
 				  </div>
 				</div>
