--- a/final/faq.html
+++ b/final/faq.html
@@ -55,9 +55,14 @@
 		color:#269ABC;
 		text-decoration:underline;
 		}
+		#site {
+position: relative;
+overflow-x: hidden;
+}
+		
 		</style>
   </head>
-  <body bgcolor="#C7FFFF">
+  <body id="site">
     <div class="head">
     	 <div class="row">
   <div class="col-xs-6 col-sm-3"><h1>Online Prescriptions</h1></div>
