--- a/final/faq.html
+++ b/final/faq.html
@@ -21,9 +21,9 @@
 	    .head{
 			background-color:#269ABC;
 			position:relative;
-			width:101%;
+			width:101.1%;
 			height:100px;
-			z-index:1;		
+					
 		}
 		.p{
 			position:absolute;
@@ -63,7 +63,7 @@
 	</style>
   </head>
   <body id="site">
-    <div class="head">
+    <div class="head" id="site">
     	 <div class="row">
   <div class="col-xs-6 col-sm-3"><h1>Online Prescriptions</h1></div>
   <div class="col-xs-6 col-sm-6"></div>
@@ -89,11 +89,12 @@
 				    <div class="panel-heading">Profile:</div>
 				    <div class="panel-body">
 				    	 <b>Name: </b>
-						 Salvador Ahedo Leyva
+						 Salvador Ahedo Leyva<br />
 						 <b>Age: </b>
-						 19
+						 19<br />
 						 <b>Weight: </b>
 						 60 Kg
+						 <br />
 				    </div>
 				  </div>
 				</div>
