--- a/final/faq.html
+++ b/final/faq.html
@@ -59,12 +59,15 @@
 			position: relative;
 			overflow-x: hidden;
 		}
+		#contenedor{
+			padding-left:1.1%
+		}
 		
 	</style>
   </head>
   <body id="site">
     <div class="head" id="site">
-    	 <div class="row">
+    	 <div class="row" id="contenedor">
   <div class="col-xs-6 col-sm-3"><h1>Online Prescriptions</h1></div>
   <div class="col-xs-6 col-sm-6"></div>
   <div class="col-xs-2 col-sm-1"><center><div class="h5"><button class="astext"><h5>FAQ</h5></button></div></center></div>
@@ -73,7 +76,7 @@
   </div>
   
   
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta name="viewport" content="width=1000,device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="HandheldFriendly" content="true">
 
