--- a/final/source.html
+++ b/final/source.html
@@ -57,17 +57,6 @@
 	  		padding-left:5%
 		}
 		
-		@media screen and (max-width: 1136) {
-    	#primary { width:100%; }
-    	#secondary { width:100%; margin: 0px;}  
-		}
-
-		/* Tabled Portrait */
-		@media screen and (min-width: 640) {
-  		#primary { width:100%; }
-    	#secondary { width:100%; margin: 0px; }
-		}
-		}
 		#contenido{
 			position: relative;
 		}
@@ -77,6 +66,8 @@
 <title>Online Prescriptions</title>
 
 
+		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="HandheldFriendly" content="true">
 
 </head>
