--- a/final/source.html
+++ b/final/source.html
@@ -83,12 +83,17 @@
 		<div class="row">
 			<div class="col-lg-3 move">
 				<center><img src="users.png" max-height="50%" max-width="50%"></center>
-				<div class="panel panel-default">
 				  <div class="panel panel-primary">
 				    <div class="panel-heading">Profile:</div>
-				    <div class="panel-body">[Profile Information]</div>
+				    <div class="panel-body">
+				    	<b>Name: </b>
+						Salvador Ahedo Leyva<br />
+						<b>Age: </b>
+						19<br />
+						<b>Weight: </b>
+						60 Kg
+						<br /></div>
 				  </div>
-				</div>
 			</div>
 			<div class="col-lg-7 move">
 				<!-- Nav tabs -->
