--- a/final/source.html
+++ b/final/source.html
@@ -21,7 +21,7 @@
 		.head{
 			background-color:#269ABC;
 			position:absolute;
-			width:105%;
+			width:101%;
 			height:100px;
 			z-index:1;		
 		}
@@ -60,6 +60,10 @@
 		#contenido{
 			position: relative;
 		}
+		#site {
+			position: relative;
+			overflow-x: hidden;
+		}
 </style>
 
 
@@ -72,7 +76,7 @@
 
 </head>
 <body>
-	<div class="head">
+	<div class="head" id="site">
 	<body bgcolor="#C7FFFF">
     
     	<div class="row" id="contenedor">
