--- a/final/source.html
+++ b/final/source.html
@@ -125,20 +125,21 @@
 				  </div>
 
 				  <div class="tab-pane" id="profile">
-				  	<p>CONSTITUTIONAL:  No weight loss, fever, chills, weakness or fatigue.
-HEENT:  Eyes:  No visual loss, blurred vision, double vision or yellow sclerae. Ears, Nose, Throat:  No hearing loss, sneezing, congestion, runny nose or sore throat.
-SKIN:  No rash or itching.
-CARDIOVASCULAR:  No chest pain, chest pressure or chest discomfort. No palpitations or edema.
-RESPIRATORY:  No shortness of breath, cough or sputum.
-GASTROINTESTINAL:  No anorexia, nausea, vomiting or diarrhea. No abdominal pain or blood.
-GENITOURINARY:  Burning on urination. Pregnancy. Last menstrual period, MM/DD/YYYY.
-NEUROLOGICAL:  No headache, dizziness, syncope, paralysis, ataxia, numbness or tingling in the extremities. No change in bowel or bladder control.
-MUSCULOSKELETAL:  No muscle, back pain, joint pain or stiffness.
-HEMATOLOGIC:  No anemia, bleeding or bruising.
-LYMPHATICS:  No enlarged nodes. No history of splenectomy.
-PSYCHIATRIC:  No history of depression or anxiety.
-ENDOCRINOLOGIC:  No reports of sweating, cold or heat intolerance. No polyuria or polydipsia.
-ALLERGIES:  No history of asthma, hives, eczema or rhinitis.</p>
+				  	<p><b>Constitutional:</b> No weight loss, fever, chills, weakness or fatigue.</p>
+				  	<p><b>HEENT:</b> Eyes:  No visual loss, blurred vision, double vision or yellow sclerae. Ears, Nose, Throat:  No hearing loss, sneezing, congestion, runny nose or sore throat.</p>
+				  	<p><b>Skin:</b> No rash or itching.</p>
+				  	<p><b>Cardiovascular:</b> No chest pain, chest pressure or chest discomfort. No palpitations or edema.</p>
+				  	<p><b>Respiratory:</b> No shortness of breath, cough or sputum.</p>	
+				  	<p><b>Gastrointestinal:</b> No anorexia, nausea, vomiting or diarrhea. No abdominal pain or blood.</p>	
+				  	<p><b>Genitourinary:</b> Burning on urination. Pregnancy. Last menstrual period, MM/DD/YYYY.</p>	
+				  	<p><b>Neurological:</b> No headache, dizziness, syncope, paralysis, ataxia, numbness or tingling in the extremities. No change in bowel or bladder control.</p>	
+				  	<p><b>Musculoskeletal:</b> No muscle, back pain, joint pain or stiffness.</p>
+				  	<p><b>Hematologic:</b> No anemia, bleeding or bruising.</p>
+				  	<p><b>Lymphatics:</b> No enlarged nodes. No history of splenectomy.</p>
+				  	<p><b>Psychiatric:</b> No history of depression or anxiety.</p>
+				  	<p><b>Endocrinologic:</b> No reports of sweating, cold or heat intolerance. No polyuria or polydipsia.</p>
+				  	<p><b>Allergies:</b> No history of asthma, hives, eczema or rhinitis.</p>
+				  		
 				  	
 				  </div>
 				</div>
