--- a/final/source.html
+++ b/final/source.html
@@ -125,20 +125,22 @@
 				  </div>
 
 				  <div class="tab-pane" id="profile">
-				  	<p><b>Constitutional:</b> No weight loss, fever, chills, weakness or fatigue.</p>
-				  	<p><b>HEENT:</b> Eyes:  No visual loss, blurred vision, double vision or yellow sclerae. Ears, Nose, Throat:  No hearing loss, sneezing, congestion, runny nose or sore throat.</p>
-				  	<p><b>Skin:</b> No rash or itching.</p>
-				  	<p><b>Cardiovascular:</b> No chest pain, chest pressure or chest discomfort. No palpitations or edema.</p>
-				  	<p><b>Respiratory:</b> No shortness of breath, cough or sputum.</p>	
-				  	<p><b>Gastrointestinal:</b> No anorexia, nausea, vomiting or diarrhea. No abdominal pain or blood.</p>	
-				  	<p><b>Genitourinary:</b> Burning on urination. Pregnancy. Last menstrual period, MM/DD/YYYY.</p>	
-				  	<p><b>Neurological:</b> No headache, dizziness, syncope, paralysis, ataxia, numbness or tingling in the extremities. No change in bowel or bladder control.</p>	
-				  	<p><b>Musculoskeletal:</b> No muscle, back pain, joint pain or stiffness.</p>
-				  	<p><b>Hematologic:</b> No anemia, bleeding or bruising.</p>
-				  	<p><b>Lymphatics:</b> No enlarged nodes. No history of splenectomy.</p>
-				  	<p><b>Psychiatric:</b> No history of depression or anxiety.</p>
-				  	<p><b>Endocrinologic:</b> No reports of sweating, cold or heat intolerance. No polyuria or polydipsia.</p>
-				  	<p><b>Allergies:</b> No history of asthma, hives, eczema or rhinitis.</p>
+				  	<b>Constitutional:</b> No weight loss, fever, chills, weakness or fatigue.<br />
+				  	<b>HEENT:</b> Eyes:  No visual loss, blurred vision, double vision or yellow sclerae. 
+				  	Ears, Nose, Throat:  No hearing loss, sneezing, congestion, runny nose or sore throat.<br />
+				  	<b>Skin:</b> No rash or itching.<br />
+				  	<b>Cardiovascular:</b> No chest pain, chest pressure or chest discomfort. No palpitations or edema.<br />
+				  	<b>Respiratory:</b> No shortness of breath, cough or sputum.<br />	
+				  	<b>Gastrointestinal:</b> No anorexia, nausea, vomiting or diarrhea. No abdominal pain or blood.<br />	
+				  	<b>Genitourinary:</b> Burning on urination. Pregnancy. Last menstrual period, MM/DD/YYYY.<br />
+				  	<b>Neurological:</b> No headache, dizziness, syncope, paralysis, ataxia, numbness or tingling in the extremities. 
+				  	No change in bowel or bladder control.<br />	
+				  	<b>Musculoskeletal:</b> No muscle, back pain, joint pain or stiffness.<br />
+				  	<b>Hematologic:</b> No anemia, bleeding or bruising.<br />
+				  	<b>Lymphatics:</b> No enlarged nodes. No history of splenectomy.<br />
+				  	<b>Psychiatric:</b> No history of depression or anxiety.<br />
+				  	<b>Endocrinologic:</b> No reports of sweating, cold or heat intolerance. No polyuria or polydipsia.<br />
+				  	<b>Allergies:</b> No history of asthma, hives, eczema or rhinitis.
 				  		
 				  	
 				  </div>
