--- a/final/source.html
+++ b/final/source.html
@@ -131,10 +131,9 @@
 				  	<b>Skin:</b> No rash or itching.<br />
 				  	<b>Cardiovascular:</b> No chest pain, chest pressure or chest discomfort. No palpitations or edema.<br />
 				  	<b>Respiratory:</b> No shortness of breath, cough or sputum.<br />	
-				  	<b>Gastrointestinal:</b> No anorexia, nausea, vomiting or diarrhea. No abdominal pain or blood.<br />	
-				  	<b>Genitourinary:</b> Burning on urination. Pregnancy. Last menstrual period, MM/DD/YYYY.<br />
-				  	<b>Neurological:</b> No headache, dizziness, syncope, paralysis, ataxia, numbness or tingling in the extremities. 
-				  	No change in bowel or bladder control.<br />	
+				  	<b>Gastrointestinal:</b>  nausea and vomiting.<br />	
+				  	<b>Genitourinary:</b> No burning on urination.<br />
+				  	<b>Neurological:</b> Persistent and worsening headache and dizziness as well as mild photophobia.<br />	
 				  	<b>Musculoskeletal:</b> No muscle, back pain, joint pain or stiffness.<br />
 				  	<b>Hematologic:</b> No anemia, bleeding or bruising.<br />
 				  	<b>Lymphatics:</b> No enlarged nodes. No history of splenectomy.<br />
