--- a/final/source.html
+++ b/final/source.html
@@ -129,7 +129,7 @@
 				  	<b>HEENT:</b> Eyes:  No visual loss, blurred vision, double vision or yellow sclerae. 
 				  	Ears, Nose, Throat:  No hearing loss, sneezing, congestion, runny nose or sore throat.<br />
 				  	<b>Skin:</b> No rash or itching.<br />
-				  	<b>Cardiovascular:</b> No chest pain, chest pressure or chest discomfort. No palpitations or edema.<br />
+				  	<b>Cardiovascular:</b> HERNS syndrome diagnosed. No chest pain, chest pressure or chest discomfort. No palpitations or edema.<br />
 				  	<b>Respiratory:</b> No shortness of breath, cough or sputum.<br />	
 				  	<b>Gastrointestinal:</b>  nausea and vomiting.<br />	
 				  	<b>Genitourinary:</b> No burning on urination.<br />
