--- a/final/source.html
+++ b/final/source.html
@@ -133,7 +133,7 @@
 				  		Refills: 0, Substitution Permissible<br />
 				  		Dr. Jane Smith<br />
 				  		DEA #: AN12543<br />
-				  		<b>Signature:</b><img src="sign.png" max-height="10%" max-width="10%">
+				  		<b>Signature:</b><img src="sign.png" height="30%" width="30%">
 						</p>
 				  		
 				  		</div>
