--- a/final/source.html
+++ b/final/source.html
@@ -127,13 +127,13 @@
 				  		<p>Date: March 9, 2009<br />
 				  		Name: Emily Watson Age: 27<br />
 				  		Address : 2459 N. Harbor Ave. San Diego, CA 92126 D.O.B: January 24, 1981<br />
-				  		Rx: Doxycycline 100 mg<br />
+				  		Rx: Doxycycline 100 mg                 <img src="sign.png" height="30%" width="30%"><br />
 				  		Disp: #14<br />
 				  		Sig: Take 1 capsule bid x 7 days<br />
 				  		Refills: 0, Substitution Permissible<br />
 				  		Dr. Jane Smith<br />
 				  		DEA #: AN12543<br />
-				  		<b>Signature:</b><img src="sign.png" height="30%" width="30%">
+				  		<b>Signature:</b>
 						</p>
 				  		
 				  		</div>
