--- a/final/source.html
+++ b/final/source.html
@@ -124,16 +124,16 @@
 				  		is a high probability that the tumour has a vascular cause
 				  	</p>
 				  		<p><h3>Treatment:</h3></p>
-				  		<p>Date: March 9, 2009<br />
-				  		Name: Emily Watson Age: 27<br />
-				  		Address : 2459 N. Harbor Ave. San Diego, CA 92126 D.O.B: January 24, 1981<br />
-				  		Rx: Doxycycline 100 mg                             <img src="sign.png" height="30%" width="30%"><br />
-				  		Disp: #14<br />
-				  		Sig: Take 1 capsule bid x 7 days<br />
-				  		Refills: 0, Substitution Permissible<br />
-				  		Dr. Jane Smith<br />
-				  		DEA #: AN12543<br />
-				  		<b>Signature:</b>
+				  		<p><b>Date</b> March 9, 2009<br />
+				  		<b>Name:</b> Emily Watson Age: 27<br />
+				  		<b>Address:</b> 2459 N. Harbor Ave. San Diego, CA 92126 D.O.B: January 24, 1981<br />
+				  		<b>Rx:</b> Doxycycline 100 mg<br />
+				  		<b>Disp</b> #14<br />
+				  		<b>Sig</b> Take 1 capsule bid x 7 days<br />
+				  		<b>Refills</b> 0, Substitution Permissible<br />
+				  		<b>Dr.</b> Jane Smith<br />
+				  		<b>DEA #:</b> AN12543<br />
+				  		<img src="sign.png" height="30%" width="30%"><br />
 						</p>
 				  		
 				  		</div>
