--- a/final/source.html
+++ b/final/source.html
@@ -91,12 +91,14 @@
 				    <div class="panel-heading">Profile:</div>
 				    <div class="panel-body">
 				    	<b>Name: </b>
-						Salvador Ahedo Leyva<br />
+						Lucy Watson<br />
 						<b>Age: </b>
-						19<br />
+						27<br />
 						<b>Weight: </b>
-						60 Kg
-						<br /></div>
+						60 Kg<br />
+						<b>Height:</b>
+						1.65m<br />
+						</div>
 				  </div>
 			</div>
 			<div class="col-lg-7 move">
@@ -125,7 +127,7 @@
 				  	</p>
 				  		<p><h3>Treatment:</h3></p>
 				  		<p><b>Date</b> March 9, 2009<br />
-				  		<b>Name:</b> Emily Watson Age: 27<br />
+				  		<b>Name:</b> Lucy Watson Age: 27<br />
 				  		<b>Address:</b> 2459 N. Harbor Ave. San Diego, CA 92126 D.O.B: January 24, 1981<br />
 				  		<b>Rx:</b> Doxycycline 100 mg<br />
 				  		<b>Disp</b> #14<br />
@@ -139,7 +141,7 @@
 				  		</div>
 
 				  <div class="tab-pane" id="profile">
-				  	<b><center>3/05/2014</center></b>
+				  	<b><center>02/11/2009</center></b>
 				  	<b>Constitutional:</b> No weight loss, fever, chills, weakness or fatigue.<br />
 				  	<b>HEENT:</b> Eyes:  No visual loss, blurred vision, double vision or yellow sclerae. 
 				  	Ears, Nose, Throat:  No hearing loss, sneezing, congestion, runny nose or sore throat.<br />
