--- a/final/source.html
+++ b/final/source.html
@@ -88,7 +88,7 @@
 			<div class="col-lg-3 move">
 				<center><img src="users.png" max-height="50%" max-width="50%"></center>
 				  <div class="panel panel-primary">
-				    <div class="panel-heading">Profile:</div>
+				    <div class="panel-heading"><center>Lucy's profile</center></div>
 				    <div class="panel-body">
 				    	<b>Name: </b>
 						Lucy Watson<br />
