--- a/final/source.html
+++ b/final/source.html
@@ -141,7 +141,8 @@
 				  		</div>
 
 				  <div class="tab-pane" id="profile">
-				  	<b><center>02/11/2009</center></b>
+				  	<br/>
+				  	<b><center>02/11/2009</center></b> <br/>
 				  	<b>Constitutional:</b> No weight loss, fever, chills, weakness or fatigue.<br />
 				  	<b>HEENT:</b> Eyes:  No visual loss, blurred vision, double vision or yellow sclerae. 
 				  	Ears, Nose, Throat:  No hearing loss, sneezing, congestion, runny nose or sore throat.<br />
