--- a/final/faq.html
+++ b/final/faq.html
@@ -122,24 +122,41 @@
 				  	<p>Taking her age and sex into consideration, the lesion is most likely to be a primary lesion, 
 				  		single and benign in nature. In addition, given that Lucy's father died 15 years ago of stroke related 
 				  		causes, her mother and her sister both have cardiovascular illness, and Lucy has HERNS syndrome, there 
-				  		is a high probability that the tumour has a vascular cause</p>
+				  		is a high probability that the tumour has a vascular cause
+				  	</p>
+				  		<p><h3>Treatment:</h3></p>
+				  		<p><b>Date</b> March 9, 2009<br />
+				  		<b>Name:</b> Lucy Watson Age: 27<br />
+				  		<b>Address:</b> 2459 N. Harbor Ave. San Diego, CA 92126 D.O.B: January 24, 1981<br />
+				  		<b>Rx:</b> Doxycycline 100 mg<br />
+				  		<b>Disp</b> #14<br />
+				  		<b>Sig</b> Take 1 capsule bid x 7 days<br />
+				  		<b>Refills</b> 0, Substitution Permissible<br />
+				  		<b>Dr.</b> Jane Smith<br />
+				  		<b>DEA #:</b> AN12543<br />
+				  		<img src="sign.png" height="30%" width="30%"><br />
+						</p>
 				  </div>
 
-				  <div class="tab-pane" id="profile">
-				  	<p>CONSTITUTIONAL:  No weight loss, fever, chills, weakness or fatigue.
-HEENT:  Eyes:  No visual loss, blurred vision, double vision or yellow sclerae. Ears, Nose, Throat:  No hearing loss, sneezing, congestion, runny nose or sore throat.
-SKIN:  No rash or itching.
-CARDIOVASCULAR:  No chest pain, chest pressure or chest discomfort. No palpitations or edema.
-RESPIRATORY:  No shortness of breath, cough or sputum.
-GASTROINTESTINAL:  No anorexia, nausea, vomiting or diarrhea. No abdominal pain or blood.
-GENITOURINARY:  Burning on urination. Pregnancy. Last menstrual period, MM/DD/YYYY.
-NEUROLOGICAL:  No headache, dizziness, syncope, paralysis, ataxia, numbness or tingling in the extremities. No change in bowel or bladder control.
-MUSCULOSKELETAL:  No muscle, back pain, joint pain or stiffness.
-HEMATOLOGIC:  No anemia, bleeding or bruising.
-LYMPHATICS:  No enlarged nodes. No history of splenectomy.
-PSYCHIATRIC:  No history of depression or anxiety.
-ENDOCRINOLOGIC:  No reports of sweating, cold or heat intolerance. No polyuria or polydipsia.
-ALLERGIES:  No history of asthma, hives, eczema or rhinitis.</p>
+				  <div class="tab-pane active" id="profile">
+				  	<br/>
+				  	<b><center><h4>02/11/2009</h4></center></b>
+				  	<b>Constitutional:</b> No weight loss, fever, chills, weakness or fatigue.<br />
+				  	<b>HEENT:</b> Eyes:  No visual loss, blurred vision, double vision or yellow sclerae. 
+				  	Ears, Nose, Throat:  No hearing loss, sneezing, congestion, runny nose or sore throat.<br />
+				  	<b>Skin:</b> No rash or itching.<br />
+				  	<b>Cardiovascular:</b> HERNS syndrome diagnosed. No chest pain, chest pressure or chest discomfort. No palpitations or edema.<br />
+				  	<b>Respiratory:</b> No shortness of breath, cough or sputum.<br />	
+				  	<b>Gastrointestinal:</b> Nausea and vomiting.<br />	
+				  	<b>Genitourinary:</b> No burning on urination.<br />
+				  	<b>Neurological:</b> Persistent and worsening headache and dizziness as well as mild photophobia.<br />	
+				  	<b>Musculoskeletal:</b> No muscle, back pain, joint pain or stiffness.<br />
+				  	<b>Hematologic:</b> No anemia, bleeding or bruising.<br />
+				  	<b>Lymphatics:</b> No enlarged nodes. No history of splenectomy.<br />
+				  	<b>Psychiatric:</b> No history of depression or anxiety.<br />
+				  	<b>Endocrinologic:</b> No reports of sweating, cold or heat intolerance. No polyuria or polydipsia.<br />
+				  	<b>Allergies:</b> No history of asthma, hives, eczema or rhinitis.<br />
+				  	<br />
 				  </div>
 				</div>
 			</div>	
