--- a/final/faq.html
+++ b/final/faq.html
@@ -88,15 +88,16 @@
 			<div class="col-lg-3 move">
 				<center><img src="users.png" max-height="50%" max-width="50%"></center>
 				  <div class="panel panel-primary">
-				    <div class="panel-heading">Profile:</div>
+				   <div class="panel-heading"><center>Lucy's profile</center></div>
 				    <div class="panel-body">
 				    	 <b>Name: </b>
-						 Salvador Ahedo Leyva<br />
-						 <b>Age: </b>
-						 19<br />
-						 <b>Weight: </b>
-						 60 Kg
-						 <br />
+						Lucy Watson<br />
+						<b>Age: </b>
+						27<br />
+						<b>Weight: </b>
+						60 Kg<br />
+						<b>Height:</b>
+						1.65 m<br />
 				    </div>
 				  </div>
 			</div>
