--- a/final/prototype1.html
+++ b/final/prototype1.html
@@ -64,7 +64,7 @@
 	</div>
 	<div class="p">
 		<div class="row">
-			<div class="col-lg-9"><img src="700x400.gif"></div>
+			<div class="col-lg-9"><img src="Captura de pantalla 2014-05-03 a la(s) 20.13.27.png" max-height="100%" max-width="100%"></div>
 			<div class="col-md-3">
 				<form role="form">
 				  <div class="form-group">
