--- a/final/prototype1.html
+++ b/final/prototype1.html
@@ -51,18 +51,32 @@
 		    margin:0;
 		    padding:0;
 		}
+		#contenedor{
+			padding-left:1.1%
+		}
+		
 		</style>
   </head>
-  <body bgcolor="#C7FFFF">
-    <div class="head">
-    	<div class="row">
-    		<div class="col-md-9"><h1>Online Prescriptions</h1></div>
-    		<div class="col-md-1"><center><div class="h5"><button class="astext"><h5>FAQ</h5></button></div></center></div>
-    		<div class="col-md-1"><center><div class="h5"><button class="astext"><h5>Contact Us</h5></button></div></center></div>
-    	</div>
-		
-	</div>
-	<div class="p">
+  <body id="site">
+  	<div class="head" id="site">
+  		<div class="row" id="contenedor">
+  		<div class="col-xs-6 col-sm-3"><h1>Online Prescriptions</h1></div>
+  		<div class="col-xs-6 col-sm-6"></div>
+  		<div class="col-xs-2 col-sm-1"><center><div class="h5"><button class="astext"><h5>FAQ</h5></button></div></center></div>
+  		<div class="col-xs-2 col-sm-1"><center><div class="h5"><button class="astext"><h5>Contact Us</h5></button></div></center></div>
+  	</div>
+  </div>
+	
+  <div class="p" id="contenedor">
+		<div class="row">
+			<div class="col-lg-3 move">
+	
+	
+	
+	
+	
+	
+	<div class="p" id="contenedor">
 		<div class="row">
 			<div class="col-lg-9"><img src="Captura de pantalla 2014-05-03 a la(s) 20.13.27.png" max-height="100%" max-width="100%"></div>
 			<div class="col-md-3">
