--- a/final/faq.html
+++ b/final/faq.html
@@ -18,6 +18,7 @@
     <link rel="shortcut icon" href="images/favicon.ico">
 
     <style>
+    img {max-width: 100%;}
 	    .head{
 			background-color:#269ABC;
 			position:relative;
@@ -63,9 +64,6 @@
 		}
 		
 	</style>
-  <meta name="viewport" content="width=1000,device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="HandheldFriendly" content="true">
   </head>
   
   <body id="site">
@@ -136,7 +134,7 @@
 						</p>
 				  </div>
 
-				  <div class="tab-pane active" id="profile">
+				  <div class="tab-pane" id="profile">
 				  	<br/>
 				  	<b><center><h4>02/11/2009</h4></center></b>
 				  	<b>Constitutional:</b> No weight loss, fever, chills, weakness or fatigue.<br />
