--- a/final/proteus.html
+++ b/final/proteus.html
@@ -37,9 +37,8 @@
 			text-align:center;
 		}
 		
-		.image{
-			padding-top: 60px;
-			padding-left: 30px;
+		.imagen{
+			padding-top: 30px;
 			img { max-width: 100%; }
 		}
 		
@@ -86,22 +85,22 @@
         		<img src="pi.jpg" max-height="100%" max-width="100%">
         	</div>  		 	
 		</div>
-        <div class="col-xs-6 col-md-4">
+        <div class="col-xs-8 col-md-4">
         	<div class="next">
         		<form role="form">
 				  <div class="form-group">
 				    <label for="exampleInputEmail1"><center>Username</center></label>
-				    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Example123">
+				    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Your Name">
 				  </div>
 				  <div class="form-group">
 				    <label for="exampleInputPassword1">Password</label>
 				    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
 				  </div>
-				  <a href="faq.html" type="button" class="btn btn-default">Log-In</button>
-				  </a></form>
+				  <a href="faq.html" type="button" class="btn btn-default">Log-In</button></a>
+				  </form>
 			</div>
 		</div>
-  		
+  		</div>
 	<!--<div class="p" id="contenedor">
 		<div class="row">
 			<div class="col-lg-3 move">
