--- a/final/faq.html
+++ b/final/faq.html
@@ -46,7 +46,7 @@
 			border-left-style:solid;
 		}
 		.astext {
-			color:#190707
+			color:#190707;
 		    background:none;
 		    border:none;
 		    margin:0;
