--- a/final/proteus.html
+++ b/final/proteus.html
@@ -75,7 +75,7 @@
     	 <div class="row" id="contenedor">
   <div class="col-xs-6 col-sm-3"><h1>Online Prescriptions</h1></div>
   <div class="col-xs-6 col-sm-6"></div>
-  <div class="col-xs-2 col-sm-1"><center><div class="h5"><a href="About.html" type="button" class="astext"><h5>Contact Us</h5></a></div></center></div>
+  <div class="col-xs-2 col-sm-1"><center><div class="h5"><a href="main.html" type="button" class="astext"><h5>Contact Us</h5></a></div></center></div>
   <div class="col-xs-2 col-sm-1"><center><div class="h5"><a href="http://terce.github.io" type="button" class="astext"><h5>About the App</h5></a></div></center></div>
   </div>
   </div>
@@ -97,7 +97,7 @@
 				    <label for="exampleInputPassword1">Password</label>
 				    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
 				  </div>
-				  <a href="faq.html" type="button" class="btn btn-default">Log-In</button></a>
+				  <a href="main.html" type="button" class="btn btn-default">Log-In</button></a>
 				  </form>
 			</div>
 		</div>
@@ -119,7 +119,7 @@
 				    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
 				  </div>
 				 </form>
-				  <a href="faq.html" type="button" class="btn btn-default">Log-In</button></a>
+				  <a href="main.html" type="button" class="btn btn-default">Log-In</button></a>
 				  	
 				  	
 				</div>
