--- a/final/thanks.html
+++ b/final/thanks.html
@@ -25,72 +25,6 @@
     	padding-left: 1%;
     	padding-bottom: 1%;
     }
-    .form{
-    	
-    	padding-right: 0%;
-    	padding-left: 0%;
-    	padding-bottom: 4%;
-    }
-    .area{
-    	
-    	padding-right: 0%;
-    	padding-left: 0%;
-    	padding-bottom: 4%;
-    }
-    .button{
-    	color:#269ABC;
-    	padding-right: 0%;
-    	padding-left: 0%;
-    	padding-bottom: 4%;
-    }
-    img {max-width: 100%;}
-	    .head{
-			background-color:#269ABC;
-			position:relative;
-			width:101.1%;
-			height:100px;
-		}
-		.p{
-			position:absolute;
-			top:140px;
-		}
-		.next{
-			padding-top: 25%;
-			
-			padding-right: 25%;
-			top:10%;
-			text-align:center;
-		}
-		
-		.imagen{
-			padding-top: 30px;
-			img { max-width: 100%; }
-		}
-		
-		.h5{
-			padding:5%;
-			border-right-style:solid;
-			border-left-style:solid;
-		}
-		.astext {
-			color:#190707;
-		    background:#269ABC;
-		    border:none;
-		    margin:0;
-		    padding:0;
-		}
-		.titlebox{
-			color:#269ABC;
-			text-decoration:underline;
-		}
-		#site {
-			position: relative;
-			overflow-x: hidden;
-		}
-		#contenedor{
-			padding-left:1.1%
-		}
-		
 	</style>
   
   </head>
@@ -98,7 +32,7 @@
   <body id="site">
     <div class="head" id="site">
     	 <div class="row" id="contenedor">
-  <div class="col-xs-6 col-sm-3"><a href="main.html" type="button" class="astext"><h1>Online Prescriptions</h1></a></div>
+  <div class="col-xs-6 col-sm-3"><h1>Online Prescriptions</h1></div>
   <div class="col-xs-6 col-sm-6"></div>
   <div class="col-xs-2 col-sm-1"><center><div class="h5"><a href="About.html" type="button" class="astext"><h5>Contact Us</h5></a></div></center></div>
   <div class="col-xs-2 col-sm-1"><center><div class="h5"><a href="http://terce.github.io" type="button" class="astext"><h5>About the App</h5></a></div></center></div>
@@ -114,7 +48,7 @@
   				<h1>Get in touch with us!</h1>
   		</div>
   		<div class="form">
-  			<div class="col-xs-12">
+  			<div class="col-xs-11">
   			<p><h5>We are happy to answer any question you have as well as 
   			any feedback you may want to provide us in order to continue 
   			offering the best possible service, we continously improve our 
