--- a/final/source.html
+++ b/final/source.html
@@ -20,7 +20,7 @@
 			background-color:#269ABC;
 			position:absolute;
 			width:105%;
-			height:100px;
+			height:10%;
 			z-index:1;		
 		}
 		.p{
