--- a/final/About.html
+++ b/final/About.html
@@ -48,7 +48,7 @@
 			background-color:#269ABC;
 			position:relative;
 			width:101.1%;
-			height:100px;
+			height:10%;
 		}
 		.p{
 			position:absolute;
@@ -68,7 +68,7 @@
 		}
 		
 		.h5{
-			padding:5%;
+			padding:2%;
 			border-right-style:solid;
 			border-left-style:solid;
 		}
