--- a/final/proteus.html
+++ b/final/proteus.html
@@ -23,7 +23,7 @@
 			background-color:#269ABC;
 			position:relative;
 			width:101.1%;
-			height:100px;
+			height:10%;
 		}
 		.p{
 			position:absolute;
