--- a/final/proteus.html
+++ b/final/proteus.html
@@ -75,7 +75,7 @@
     	 <div class="row" id="contenedor">
   <div class="col-xs-6 col-sm-3"><h1>Online Prescriptions</h1></div>
   <div class="col-xs-6 col-sm-6"></div>
-  <div class="col-xs-2 col-sm-1"><center><div class="h5"><a href="main.html" type="button" class="astext"><h5>Contact Us</h5></a></div></center></div>
+  <div class="col-xs-2 col-sm-1"><center><div class="h5"><a href="About.html" type="button" class="astext"><h5>Contact Us</h5></a></div></center></div>
   <div class="col-xs-2 col-sm-1"><center><div class="h5"><a href="http://terce.github.io" type="button" class="astext"><h5>About the App</h5></a></div></center></div>
   </div>
   </div>
