--- a/final/About.html
+++ b/final/About.html
@@ -147,7 +147,7 @@
   			<div class="col-xs-8">
   				<textarea class="form-control" rows="3" placeholder="Enter your message here"></textarea>
   				<br />
-  				<a href="main.html" type="button" class="btn btn-block btn-lg btn-info">Send</button></a>
+  				<a href="thanks.html" type="button" class="btn btn-block btn-lg btn-info">Send</button></a>
   			</div>
   		</div>
   	</div>
