--- a/final/source.html
+++ b/final/source.html
@@ -96,6 +96,8 @@
 						60 Kg<br />
 						<b>Height:</b>
 						1.65 m<br />
+						<b>Doctor:</b> 
+						Jane Smith <br />
 						</div>
 				  </div>
 			</div>
