--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 						<h4><a href="Coco.png">Abraham-UI Kit Webpage v3</a></h4>
 						<h4><a href="persona.html">Personas & Benchmark</a></h4>
 						<h4><a href="diagrama.jpg">Diagram</a></h4>
-						<h4><a href="final/proteus.html">Final paciente</a></h4>						
-						<h4><a href="final/search.html">Final farmacia</a></h4>						
+						<h4><a href="final/proteus.html">Final patient</a></h4>						
+						<h4><a href="final/search.html">Final pharmacy</a></h4>						
 						<h4><a href="final/proteus.html">Final doctor</a></h4>						
 						<h4><a href="final/source.html">Final Movil</a></h4>						
 					</p>
