--- a/final/About.html
+++ b/final/About.html
@@ -145,7 +145,7 @@
   				<textarea class="form-control" rows="4" placeholder="Enter your message here"></textarea>
   				<br />
   				
-  				<button class="btn btn-block btn-lg btn-info" data-toggle="modal" data-target=".bs-example-modal-sm">Small modal</button>
+  				<button class="btn btn-block btn-lg btn-info" data-toggle="modal" data-target=".bs-example-modal-sm">Send!</button>
 
 <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
