--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 				</div>
 				<div class="col-lg-4">
 					<h3 class="titlebox">Members</h3>
-					<p class="info">Christian Miranda Espinoza<br />
+					<p class="info"><b>Christian Miranda Espinoza<br />
 						A01223255<br /><br />
 						Salvador Ahedo Leyva<br />
 						A01223034<br /><br />
 						Abraham Rivera Soto<br />
 						A01224262
-						<br />
+						</b><br />
 						
 						<h4><a href="v2.html">One-Page Webpage v2</a></h4>
 						<h4><a href="Webpage v1.1 chava.png">Salvador cacoon</a></h4>
