--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<h4><a href="v2.html">One-Page Webpage v2</a></h4>
 						<h4><a href="Webpage v1.1 chava.png">Salvador cacoon</a></h4>
 						<h4><a href="Info.html">Salvador cacoon implementation</a></h4>
-						<h4><a href="Webpage v1.0 christian.png">Christian cacoon 1 & </a><a href="Webpage v1.1 christian.png">Christian cacoon 2</a></h4>
+						<h4><a href="Webpage v1.0 christian.png">Christian cacoon 1 </a>& <a href="Webpage v1.1 christian.png">Christian cacoon 2</a></h4>
 						<h4><a href="chri/template1.html">Christian cacoon implementation</a></h4>
 						<h4><a href="coco3.jpg">Abraham cacoon</a></h4>
 						<h4><a href="tercero/template.html">Salvador-UI Kit Webpage v3</a></h4>
