--- a/index.html
+++ b/index.html
@@ -102,10 +102,7 @@
 						<h4><a href="Coco.png">Abraham-UI Kit Webpage v3</a></h4>
 						<h4><a href="persona.html">Personas & Benchmark</a></h4>
 						<h4><a href="diagrama.jpg">Diagram</a></h4>
-						<h4><a href="final/proteus.html">Final patient</a></h4>						
-						<h4><a href="final/search.html">Final pharmacy</a></h4>						
-						<h4><a href="final/proteus.html">Final doctor</a></h4>						
-						<h4><a href="final/source.html">Final Movil</a></h4>						
+						<h4><a href="final/proteus.html">Final patient</a></h4> <h4><a href="final/search.html">Final pharmacy</a></h4> <h4><a href="final/proteus.html">Final doctor</a></h4> <h4><a href="final/source.html">Final Movil</a></h4>						
 					</p>
 					<iframe width="420" height="300" src="//www.youtube.com/embed/le_WOtn2xyc" frameborder="0" allowfullscreen></iframe>
 				</div>
