--- a/final/main.html
+++ b/final/main.html
@@ -8,8 +8,6 @@
     <title>Online Prescriptions</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-	<!--no se si funcione-->
-
     <meta name="description" content="Flat UI Kit Free is a Twitter Bootstrap Framework design and Theme, this responsive framework includes a PSD and HTML version."/>
 
     <meta name="viewport" content="width=1200, initial-scale=1.0, maximum-scale=1.0">
@@ -24,11 +22,12 @@
 			background-color:#269ABC;
 			position:relative;
 			width:101.1%;
-			height:100px;
+			height:5%;
 		}
 		.p{
 			position:absolute;
-			top:140px;
+			padding-top:2%;
+			padding-left:15%;
 		}
 		.col-lg-9{
 			left: 5%;
