--- a/final/search.html
+++ b/final/search.html
@@ -103,7 +103,7 @@
 							<div class="panel-body">
 							<ul>
 								<li ng-repeat='person in people | filter:searchText' ng-show='person.live == true'>
-									<a href="http://terce.github.io" type="button" class="astext"><img src="users.png" height="10%" width="10%">{{person.name}}</button>
+									<a href="farmacia1.html" type="button" class="astext"><img src="users.png" height="10%" width="10%">{{person.name}}</button>
 								</li>
 							</ul>
 							</div>
