--- a/final/search.html
+++ b/final/search.html
@@ -97,6 +97,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-10">
+						<h1>Search patient name</h1>
 						<input type="text" class="form-control" placeholder= "Search"  ng-model='searchText'/>
 						<div class="panel panel-primary">
 							<div class="panel-heading">Results:</div>
