--- a/final/Busqueda Doctores.html
+++ b/final/Busqueda Doctores.html
@@ -180,17 +180,15 @@
 			<LABEL for="name">Name of the patient:</LABEL>
             <input type='text' ng-model='newPerson' /></br>
     		<LABEL for="Age" style="margin-top: 10px;">Age:</LABEL>
-            <textarea style="margin-left: 20px;" name="Medicine2" rows="1" cols="3"></textarea>
-     		<LABEL for="Gender" style="margin-left: 15px;">Gender</LABEL>
-            <textarea style="margin-left: 15px;" name="Medicine2" rows="1" cols="8"></textarea></br>
-            <LABEL style="margin-left: 0px;" for="Ethnic Race">Adress</LABEL>
-            <textarea style="margin-left: 10px; name="Medicine1" rows="1" cols="35"></textarea></br>
-			<LABEL for="Level of studies" >Level of studies</LABEL>
-		    <textarea name="Medicine3" rows="1" cols="50"></textarea></br>
+            <textarea style="margin-left: 22px;" name="Medicine2" rows="1" cols="8"></textarea>
+            <LABEL style="margin-left: 30px;" for="Ethnic Race">Weight</LABEL>
+            <textarea style="margin-left: 10px; name="Medicine1" rows="1" cols="8"></textarea></br>
+     		<LABEL for="Gender">Gender:</LABEL>
+            <textarea style="margin-left: 0px;" name="Medicine2" rows="1" cols="8"></textarea></br>
 		    <LABEL for="Level of studies" >Diagnosis</LABEL>
-		    <textarea name="Medicine3" rows="1" cols="50"></textarea></br>
+		    <textarea name="Medicine3" rows="4" cols="57"></textarea></br>
 		    <LABEL for="Level of studies" >Treatment</LABEL>
-		    <textarea name="Medicine3" rows="1" cols="50"></textarea></br>
+		    <textarea name="Medicine3" rows="4" cols="57"></textarea></br>
 				<a href="#close" type="button" class="btn btn-default" style="margin-left:38%;" data-dismiss="modal" ng-click='addNew()'>Submit</button></a>
 			</div>
 		</div>
