--- a/final/Busqueda Doctores.html
+++ b/final/Busqueda Doctores.html
@@ -162,7 +162,7 @@
 							<div class="panel-body">
 							<ul>
 								<li ng-repeat='person in people | filter:searchText' ng-show='person.live == true'>
-									<a href="farmacia1.html" type="button" class="astext"><img src="users.png" height="10%" width="10%">{{person.name}}</button>
+									<a href="main.html" type="button" class="astext"><img src="users.png" height="10%" width="10%">{{person.name}}</button>
 								</li>
 							</ul>
 							
