--- a/final/Busqueda Doctores.html
+++ b/final/Busqueda Doctores.html
@@ -180,11 +180,13 @@
 			<LABEL for="name">Name of the patient:</LABEL>
             <input type='text' ng-model='newPerson' /></br>
     		<LABEL for="Age" style="margin-top: 10px;">Age:</LABEL>
-            <textarea style="margin-left: 22px;" name="Medicine2" rows="1" cols="8"></textarea>
+            <textarea style="margin-left: 17px;" name="Medicine2" rows="1" cols="8"></textarea>
             <LABEL style="margin-left: 30px;" for="Ethnic Race">Weight</LABEL>
             <textarea style="margin-left: 10px; name="Medicine1" rows="1" cols="8"></textarea></br>
-     		<LABEL for="Gender">Gender:</LABEL>
-            <textarea style="margin-left: 0px;" name="Medicine2" rows="1" cols="8"></textarea></br>
+     		<LABEL for="Gender">Height:</LABEL>
+            <textarea style="margin-left: 0px;" name="Medicine2" rows="1" cols="8"></textarea>
+            <LABEL style="margin-left: 30px;" for="Ethnic Race">Gender</LABEL>
+            <textarea style="margin-left: 10px; name="Medicine1" rows="1" cols="8"></textarea></br>
 		    <LABEL for="Level of studies" >Diagnosis</LABEL>
 		    <textarea name="Medicine3" rows="4" cols="57"></textarea></br>
 		    <LABEL for="Level of studies" >Treatment</LABEL>
