--- a/final/About2.html
+++ b/final/About2.html
@@ -154,7 +154,7 @@
       <br />
     </div>
     <div class="modal-footer">
-        <a href="farmacia1.html" type="button" class="btn btn-block btn-lg btn-info">Continue</button></a>
+        <a href="search.html" type="button" class="btn btn-block btn-lg btn-info">Continue</button></a>
       </div>
   </div>
 </div>
