--- a/final/Busqueda Doctores.html
+++ b/final/Busqueda Doctores.html
@@ -171,7 +171,7 @@
 					
 					<!--<button class="btn btn-primary btn-lg" data-toggle="openModal" 
 						style="position: absolute; bottom: 30px; right: 30px" data-target="#openModal">Add</button>-->
-<a href="#openModal" type="button" class="btn btn-primary" style="position: absolute; bottom: 30px; right: 30px">Add</button></a>
+<a href="#openModal" type="button" class="btn btn-primary" style="position: absolute; bottom: 1%; left: 45%">Add</button></a>
 <div id="openModal" class="modalDialog">
 	<div>
 		<a href="#close" title="Close" class="close">X</a>
